fix: markdown text align to center feature
issue: #606

--- a/src/client/generic/components/markdown/MarkdownBase.scss
+++ b/src/client/generic/components/markdown/MarkdownBase.scss
@@ -14,4 +14,8 @@
     width: 100%;
     display: inline-block;
   }
+
+  .text-align-center {
+    text-align: center;
+  }
 }
